Fix alignment in small sizes

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -39,6 +39,9 @@ main > p:first-child {
     margin-bottom: 0;
 }
 
+h1, h2 {
+    text-align: left;
+}
 h1 {
     margin-bottom: 2rem;
     border-bottom: .05rem solid #000000;
@@ -46,7 +49,6 @@ h1 {
     font-size: 3rem;
     font-family: "Open Sans Condensed", sans-serif;
 }
-
 h2 {
     margin-top: 2rem;
     margin-bottom: 1rem;
@@ -184,6 +186,7 @@ details.section > summary,
 details.reader > summary {
     font-size: 1.5rem;
     font-family: "Open Sans", sans-serif;
+    text-align: left;
 }
 
 div.reader-controls {
